# AlgoTrader

./: Dockerfile  Makefile  main.py  pyproject.toml
